Quartz sync: Jun 19, 2025, 10:46 PM